add new styling

--- a/src/TextEditor/SelectionText/SelectionText.scss
+++ b/src/TextEditor/SelectionText/SelectionText.scss
@@ -1,7 +1,7 @@
 .selection {
   &-text {
     display: inline;
-    border: 1px dotted grey;
+    border: 1px dotted #1565c0;
     &_wrap {
       display: inline;
       position: relative;
