--- a/src/TextEditor/TextEditor.scss
+++ b/src/TextEditor/TextEditor.scss
@@ -1,8 +1,9 @@
 .text-editor {
-  border: 1px solid black;
+  border: 1px solid #1565c0;
   padding: 15px;
   cursor: pointer;
   position: relative;
+  margin: 10px 0;
 }
 
 .public-DraftEditor-content {
