--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "SansProRegular";
+  src: url("./assets/fonts/SansProRegular.ttf") format("truetype");
+  font-display: swap;
+}
+
 body {
   margin: 0;
   padding: 10px;
@@ -10,4 +16,9 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+span {
+  font-family: 'SansProLight', 'sans-serif';
+  font-size: 16px;
 }
